src/components/Modal/Modal.module.scss
@import '~@palmetto/palmetto-design-tokens/build/scss/variables-size';

/* This line prevents @reach/dialog from throwing a warning due to not importing their CSS. */
:root { --reach-dialog: 1; }

.modal-close {
  border: none;
  background: transparent;
  cursor: pointer;
  padding: var(--modal-close-button-padding);
  color: var(--modal-close-button-color);

  &:hover {
    color: var(--modal-close-button-color-hover);
  }
}

:global([data-reach-dialog-overlay]) {
  display: flex;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  align-items: flex-end;
  z-index: var(--size-z-index-overlay);
  background: hsla(0, 0%, 0%, 0.33);
  background-color: rgba(77, 82, 79, 0.5);
  overflow: hidden;

  :global {
    animation: fadeIn 0.2s;
  }
}

.container {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;

  @media (min-width: $size-breakpoint-tablet) {
    display: grid;
    grid-template-rows: minmax(var(--modal-overlay-padding), 1fr) auto minmax(var(--modal-overlay-padding), 1fr);
    grid-template-columns: var(--modal-overlay-padding) auto var(--modal-overlay-padding);
    align-content: center;
    align-items: center;
    overflow: hidden;
  }
}

:global([data-reach-dialog-content]) {
  display: flex;
  position: absolute;
  bottom: 0;
  flex-direction: column;
  grid-row: 1;
  grid-column: 1;
  z-index: var(--size-z-index-modal);
  margin: 0;
  background-color: var(--modal-background-color);
  padding: 0;
  width: 100%;
  border-radius: var(--modal-border-radius) var(--modal-border-radius) 0 0;

  :global {
    animation: slideInUp 0.3s;
  }
  @media (min-width: $size-breakpoint-tablet) {
    position: initial;
    grid-row: 2;
    grid-column: 2;
    margin: auto;
    outline: none;
    border-radius: var(--modal-border-radius);
    box-shadow: var(--modal-box-shadow);
    width: 70vw;
    min-height: unset;
    max-height: calc(100vh - 80px);

    :global {
      animation: fadeInUp 0.2s ease-out;
    }
  }

  @media(min-width: $size-breakpoint-desktop) {
    width: 50vw;
  }
}

:global([data-reach-dialog-overlay].fullscreen) {
  [data-reach-dialog-content] {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    border-radius: 0;
  }

  @media (min-width: $size-breakpoint-tablet) {
    display: grid;
    grid-template-rows: minmax(var(--modal-overlay-padding), 1fr) auto minmax(var(--modal-overlay-padding), 1fr);
    grid-template-columns: var(--modal-overlay-padding) auto var(--modal-overlay-padding);
    align-items: center;
    overflow: hidden;

    // should no longer be fullscreen on tablet and larger
    [data-reach-dialog-content] {
      position: unset;
      grid-row: 2;
      grid-column: 2;
      margin: auto;
      outline: none;
      border-radius: var(--modal-border-radius);
      box-shadow: var(--modal-box-shadow);
      width: 70vw;
      min-height: unset;
      max-height: calc(100vh - 80px);

      :global {
        animation: fadeInUp 0.2s ease-out;
      }

      @media(min-width: $size-breakpoint-desktop) {
        width: 50vw;
      }
    }
  }
}

